<resources>
    <string name="app_name">SmartClaims</string>
    <string name="conditions"><u>Nos conditions générales</u></string>
    <string name="inscription">Inscription</string>
    <string name="numeroduontrat">N du contrat</string>
    <string name="CIN"> CIN</string>
    <string name="adressemail"> ADRESSE MAIL</string>
    <string name="Seconnecter">Se connecter</string>
    <string name="OU"> OU</string>
    <string name="Sinscrire">s\'inscrire</string>
    <string name="acceptez">En \'inscrivant , vous acceptez</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Bienvenue">Bienvenue</string>
    <string name="Marouene">Marou</string>
    <string name="Client">Service Client</string>
    <string name="Police">Police Routière</string>
    <string name="Dossiers">Liste des dossiers</string>
    <string name="Valide">Validé</string>
    <string name="Type">Type d\'accident</string>
    <string name="Collison">Collision</string>
    <string name="CollisonDetails">Mon véhicule a été impliqué dans une collision</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAPTNg63-NFTlo2x2oKJyky6o4_ZAacHYA</string>
    <string name="Suivant">Suivant</string>
    <string name="Jours">Jours</string>
    <string name="Heures">Heures</string>
    <string name="Minutes">Minutes</string>
    <string name="Seconds">Seconds</string>
    <string name="Valider">Valider</string>
    <string name="Scanner">Scanner les fichiers</string>
    <string name="UploadVideos">Uploader les videos</string>
    <string name="Scanner2">Scan des documents</string>
    <string name="ajouterimages">Ajouter Images</string>
    <string name="dossier">Dossier sinistre</string>
    <string name="Lieu">Lieu de l\'accident</string>
    <string name="Temps">Temps restant</string>
    <string name="TempsGris">Temps restant pour déposer le constat</string>
    <string name="aucun">Aucun fichier trouvé</string>
    <string name="Merciscanner">Merci de scanner le constat et l\'attestation de l\'assureur B</string>
    <string name="MerciDegats">Merci de prendre au moins 4 photos pour identifier les dégats</string>
    <string name="Mercivideo">Merci d\'uploader la video des dégats </string>
    <string name="title_activity_camera">CameraActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="videotake">Ajouter Video</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_capture_video">CaptureVideoActivity</string>
    <string name="title_activity_diaporama">DiaporamaActivity</string>
    <string-array name="agences_list">
        <item>Agence Tunis</item>
        <item>Agence Sfax</item>
        <item>Agence Sousse</item>
        <item>Agence Gabes</item>
        <item>Agence Tozeur</item>

    </string-array>
    <string name="title_activity_count_down">CountDownActivity</string>

</resources>