<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.marouenekhadhraoui.smartclaims.ui.signup.SignUpViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:backgroundTint="?attr/colorPrimary">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linearLayoutCompat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"

                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:gravity="center">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_logo"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="70dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginEnd="71dp"
                            android:src="@drawable/ic_groupe_16186"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.497"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="100dp"
                            android:fontFamily="@font/roboto_bold"
                            android:inputType="text"
                            android:text="@string/app_name"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/mainblue"
                            android:textSize="24sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/img_logo" />


                    </RelativeLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textView2"
                        android:layout_width="305dp"
                        android:layout_height="29dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/inscription"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/img_logo" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linearLayoutCompat2"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.494"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
                    app:layout_constraintVertical_bias="0.0">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/contrat"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/numeroduontrat"
                        android:inputType="textPersonName"
                        android:theme="@style/EditTextThemeOverlay"
                        app:error="@{viewModel.ContratValidator.error}"
                        app:errorEnabled="true"
                        app:startIconDrawable="@drawable/ic_contrat">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="?attr/colorSecondary"
                            android:inputType="number"
                            android:text="@={viewModel.contrat}"
                            android:textColor="@color/grey" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editPassword"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:ems="10"
                        android:hint="@string/CIN"

                        android:theme="@style/EditTextThemeOverlay"
                        app:error="@{viewModel.CinValidator.error}"
                        app:errorEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"


                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/editIdentifiant"
                        app:startIconDrawable="@drawable/ic_cin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="?attr/colorSecondary"
                            android:inputType="number"
                            android:text="@={viewModel.Cin}"
                            android:textColor="@color/grey" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/adressemail"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:drawableStart="@drawable/ic_feather_mail"
                        android:ems="10"
                        android:hint="@string/adressemail"
                        android:theme="@style/EditTextThemeOverlay"
                        app:error="@{viewModel.MailValidator.error}"
                        app:errorEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/editIdentifiant"
                        app:startIconDrawable="@drawable/ic_cin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="?attr/colorSecondary"
                            android:inputType="textEmailAddress"
                            android:text="@={viewModel.Mail}"
                            android:textColor="@color/grey" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Spinner
                        android:id="@+id/agances_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="60dp" />


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnNon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="24dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_se_connecter"
                        android:onClick="@{() -> viewModel.pressBtnSeConnceter()}"
                        android:text="@string/Seconnecter"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.522"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/editPassword" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <View
                            android:id="@+id/divider2"
                            android:layout_width="131dp"
                            android:layout_height="1dp"
                            android:layout_marginTop="11dp"
                            android:background="@color/grey"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.171"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/se_souvenir_de_moi" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/ou"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:text="@string/OU"
                            android:textAlignment="center"
                            android:textColor="@color/greylight"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/btnNon" />

                        <View
                            android:id="@+id/divider3"
                            android:layout_width="131dp"
                            android:layout_height="1dp"
                            android:layout_marginTop="11dp"
                            android:background="@color/grey"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.828"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/se_souvenir_de_moi" />

                    </androidx.appcompat.widget.LinearLayoutCompat>


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/_inscrire"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:background="@drawable/button_sinscrire"
                        android:enabled="@{viewModel.isLoginFormValidMediator}"
                        android:onClick="@{() -> viewModel.pressBtnSinscrire()}"
                        android:text="@string/Sinscrire"
                        android:textColor="@color/mainblue"
                        android:textSize="14sp" />


                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>
